# OpenGL-Particle-System

./: CMakeLists.txt  README.md
include/: camera.h  particle.h  particle_system.h  shader.h  texture.h  texture_loader.h  window.h
resources/shaders/: colour.fs  colour.vs  texture.fs  texture.vs
source/: camera.cpp  main.cpp  particle.cpp  particle_system.cpp  shader.cpp  texture_loader.cpp  window.cpp
